<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ca.mobilementat.randomquotes.NumberPickerPreference
        android:key="maxBackgrounds"
        android:defaultValue="10"
        android:title="@string/max_backgrounds"
        android:summary="@string/max_backgrounds_summary" />
    <MultiSelectListPreference android:title="@string/genres"
        android:summary="@string/genres_summary"
        android:key="genreList"
        android:defaultValue="@array/genreArray"
        android:entries="@array/genreArray"
        android:entryValues="@array/genreArray"/>
    <ca.mobilementat.randomquotes.ResetDefaultsPreference
        android:dialogMessage="@string/reset_dialog_message"
        android:key="resetDialog"
        android:negativeButtonText="@string/reset_neg_button_text"
        android:persistent="false"
        android:positiveButtonText="@string/reset_pos_button_message"
        android:summary="@string/reset_summary"
        android:title="@string/reset_title" />
</PreferenceScreen>